@@ -14,6 +14,7 @@ ENH: Ticket#672 - ForceSecureConnection to THttpRequest (Carl)
 ENH: Ticket#678 - Improved DateTimeFormatInfo performance (Stever)
 ENH: Ticket#681 - TUrlMapping can construct custom URLs now (Qiang)
 ENH: Added THead requirement check (Qiang)
+ENH: Added TOutputCache.CacheTime (Qiang)
 CHG: Ticket#685 - Slashes and backslashes mixup in PradoBase (Qiang)
 CHG: GeSHi is replaced with Text_Highlighter (Christophe)
 CHG: Validators will not validate disabled controls (Qiang)
